# serp-forge

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.cursor/: rules
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  python-tests.yml
docs/: API.md  CLI.md  CONFIGURATION.md  INSTALLATION.md  USAGE.md
examples/: 01_simple_search.py  02_news_search.py  03_batch_processing.py  04_async_scraping.py  05_advanced_analysis.py  06_custom_config.py  README.md  basic_usage.py  env.example
scripts/: publish.sh
serp_forge/: __init__.py  cli.py  config.py
serp_forge/serper/: __init__.py  client.py  core.py  models.py  scraper.py
serp_forge/utils/: __init__.py  logging.py
tests/: __init__.py  test_basic.py  test_cli.py  test_functional.py  test_integration.py  test_unit.py
